--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,14 @@ body {
   font-family: Roboto, Helvetica Neue, Arial, sans-serif;
 }
 
+.container.promotion-box::before{
+  content: 'Promocja dnia'
+  color: #ccc;
+  text-transform: uppercase;
+  background: white;
+  padding: 5px;
+}
+
 .button-promocja {
   background-color: #cc0214;
   text-decoration: none;
