--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,29 @@ body {
   padding: 5px;
 }
 
-.button-promocja {
+.promotion-title {
+  color: #3c3c3c;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.promotion-new-price {
+  color: #2c991a;
+  font-size: 24px;
+  line-height: 27px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.promotion-old-price {
+  color: #3c3c3c;
+  font-size: 18px;
+  margin-left: 20px;
+  text-decoration: line-through;
+}
+
+.promotion-button {
   background-color: #cc0214;
   text-decoration: none;
   font-family: Roboto, Helvetica Neue, Arial, sans-serif;
@@ -33,12 +55,21 @@ body {
   -webkit-transition-duration: 0.6s; /* Safari */
   transition-duration: 0.6s;
   cursor: pointer;
-  border-radius: 30px; width: 150px; height: 40px; margin-top: 0px; font-size: 13px; color: #ffffff; -moz-border-radius: 20px 20px 0 0; -webkit-border-radius: 20px 20px 20px 20px; border: solid 0px #000000;
-  -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3); -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3); box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3);
+  border-radius: 30px;
+  width: 150px;
+  height: 40px;
+  margin-top: 0px;
+  font-size: 13px;
+  color: #ffffff;
+  -moz-border-radius: 20px 20px 0 0;
+  -webkit-border-radius: 20px 20px 20px 20px;
+  border: solid 0px #000000;
+  -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3);
 }
 
-
-.button-promocja:hover {
+.promotion-button:hover {
   background-color: #dd0014;
   color: white;
 }
