--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container.promotion-box::before{
-  content: 'Promocja dnia'
+  content: 'Promocja dnia';
   color: #ccc;
   font-size: 18px;
   text-transform: uppercase;
