--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,9 @@ body {
   font-size: 18px;
   text-transform: uppercase;
   background: white;
-  padding: 5px;
+  padding: 5px 10px;
+  position: absolute;
+  margin: -40px 0 0 20px;
 }
 
 .promotion-title {
