--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,14 @@ body {
   line-height: 22px;
 }
 
+.time-name {
+  display: block;
+  color: gray;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+}
+
 .promotion-new-price {
   color: #2c991a;
   font-size: 24px;
