center text and add top padding in timer

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ body {
   line-height: 22px;
 }
 
+.row.timer {
+  padding-top: 70px;
+  text-align: center;
+}
+
 .time-name {
   display: block;
   color: gray;
