--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,17 @@ body {
   text-align: center;
 }
 
+.time-number {
+  color: white;
+  background: black;
+  font-size: 50px;
+  font-weight: 700;
+  padding: 10px;
+  display: inline-block;
+  border-radius: 7px;
+  margin-bottom: 10px;
+}
+
 .time-name {
   display: block;
   color: gray;
