--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,9 @@ body {
   display: inline-block;
   border-radius: 7px;
   margin-bottom: 10px;
+  -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3);
 }
 
 .time-name {
