--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 
-.container.promotion-box {
+.container.sale-box {
   border: 3px solid #ff0000;
   background-color: #ffffff;
   border-radius: 30px;
@@ -16,7 +16,7 @@ body {
   font-family: Roboto, Helvetica Neue, Arial, sans-serif;
 }
 
-.container.promotion-box::before{
+.container.sale-box::before{
   content: 'Promocja dnia';
   color: gray;
   font-size: 18px;
@@ -27,7 +27,7 @@ body {
   margin: -40px 0 0 20px;
 }
 
-.promotion-title {
+.sale-title {
   color: #3c3c3c;
   font-size: 18px;
   line-height: 22px;
@@ -60,7 +60,7 @@ body {
   font-weight: bold;
 }
 
-.promotion-new-price {
+.sale-new-price {
   color: #2c991a;
   font-size: 24px;
   line-height: 27px;
@@ -69,14 +69,14 @@ body {
   margin-bottom: 20px;
 }
 
-.promotion-old-price {
+.sale-old-price {
   color: #3c3c3c;
   font-size: 18px;
   margin-left: 20px;
   text-decoration: line-through;
 }
 
-.promotion-button {
+.sale-button {
   background-color: #cc0214;
   text-decoration: none;
   font-family: Roboto, Helvetica Neue, Arial, sans-serif;
@@ -99,12 +99,12 @@ body {
   box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3);
 }
 
-.promotion-button:hover {
+.sale-button:hover {
   background-color: #dd0014;
   color: white;
 }
 
-.promotion-box img {
+.sale-box img {
     max-width: 100%;
 }
 
